--- a/RealEngine/RealEngine.vcxproj.filters
+++ b/RealEngine/RealEngine.vcxproj.filters
@@ -76,6 +76,9 @@
     <Filter Include="Libraries\ImGuizmo">
       <UniqueIdentifier>{26e88d7b-a1da-44bb-a5a2-9f52820d0002}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Sources\Components">
+      <UniqueIdentifier>{49c903e8-c683-4640-bff3-03e864de4f39}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Module.h">
@@ -432,9 +435,6 @@
     <ClInclude Include="HierarchyWindow.h">
       <Filter>Sources\Windows</Filter>
     </ClInclude>
-    <ClInclude Include="ModuleScene.h">
-      <Filter>Sources\Modules</Filter>
-    </ClInclude>
     <ClInclude Include="SceneWindow.h" />
     <ClInclude Include="assimp\include\aabb.h">
       <Filter>Libraries\assimp</Filter>
@@ -660,6 +660,12 @@
     </ClInclude>
     <ClInclude Include="ModuleLoader.h">
       <Filter>Sources\Modules</Filter>
+    </ClInclude>
+    <ClInclude Include="Transformation.h">
+      <Filter>Sources\Components</Filter>
+    </ClInclude>
+    <ClInclude Include="Component.h">
+      <Filter>Sources\Components</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -990,9 +996,6 @@
     <ClCompile Include="HierarchyWindow.cpp">
       <Filter>Sources\Windows</Filter>
     </ClCompile>
-    <ClCompile Include="ModuleScene.cpp">
-      <Filter>Sources\Modules</Filter>
-    </ClCompile>
     <ClCompile Include="SceneWindow.cpp" />
     <ClCompile Include="ImGuizmo\ImGuizmo.cpp">
       <Filter>Libraries\ImGuizmo</Filter>
@@ -1002,6 +1005,12 @@
     </ClCompile>
     <ClCompile Include="ModuleLoader.cpp">
       <Filter>Sources\Modules</Filter>
+    </ClCompile>
+    <ClCompile Include="Component.cpp">
+      <Filter>Sources\Components</Filter>
+    </ClCompile>
+    <ClCompile Include="Transformation.cpp">
+      <Filter>Sources\Components</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
